--- a/challenge01/style.css
+++ b/challenge01/style.css
@@ -28,11 +28,13 @@ body {
   width: 80%;
   margin: 0 auto;
 
-  padding: 2em;
+  padding: 3em;
   /*height: 300px;*/
 }
 
 .intro-content {
   width: 50%;
-  padding: 3em;
+
+  /* Just do it in .container is enough. doing here + container will compound the em: 3*3em */
+  /*padding: 3em;*/
 }
