--- a/challenge02/style.css
+++ b/challenge02/style.css
@@ -23,11 +23,18 @@ body {
   font-family: sans-serif;
 }
 
+section {
+  background: #23424a;
+}
+
 .container {
   width: 80%;
   max-width: 750px;
   margin: 0 auto;
-  background: #23424a;
+  /*background: #23424a;*/
+}
+
+.container-top {
   color: white;
   padding: 50px 0;
 }
