--- a/challenge02/style.css
+++ b/challenge02/style.css
@@ -23,8 +23,18 @@ body {
   font-family: sans-serif;
 }
 
-section {
+/*section {*/
+/*  background: #23424a;*/
+/*}*/
+/*.container-top {*/
+/*  color: white;*/
+/*  padding: 50px 0;*/
+/*}*/
+
+.intro {
   background: #23424a;
+  color: white;
+  padding: 50px 0;
 }
 
 .container {
@@ -34,10 +44,7 @@ section {
   /*background: #23424a;*/
 }
 
-.container-top {
-  color: white;
-  padding: 50px 0;
-}
+
 
 .intro-content {
   width: 50%;
