My solution to challenge #3 - Add google font

--- a/challenge03/style.css
+++ b/challenge03/style.css
@@ -12,6 +12,7 @@ https://www.figma.com/file/dGPcL6Ym2avOt4736aHb2B/conquer-responsive-layout-week
 
 body {
   margin: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 /*.intro {*/
