--- a/Flexbox-FlexboxBasicLayout/style.css
+++ b/Flexbox-FlexboxBasicLayout/style.css
@@ -15,7 +15,7 @@ h1 {
   color: #0F9;
   text-transform: uppercase;
   letter-spacing: 15px;
-  outline: 3px solid var(--white);
+  outline: 3px solid #FFF;
   outline-offset: 0.25em;
   display: inline-block;
   margin: 0.25em 0 0.5em;
@@ -53,6 +53,10 @@ p span {
   height: 100vh;
   padding: 1em;
   color: #FFF;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .sales-points {
