--- a/Flexbox-FlexboxBasicLayout/style.scss
+++ b/Flexbox-FlexboxBasicLayout/style.scss
@@ -23,7 +23,7 @@ h1 {
   color: $green;
   text-transform: uppercase;
   letter-spacing: 15px;
-  outline: 3px solid var(--white);
+  outline: 3px solid $white;
   outline-offset: .25em;
   display: inline-block;
   margin: 0.25em 0 0.5em;
@@ -65,6 +65,11 @@ p {
   height: 100vh;
   padding: 1em;
   color: $white;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .sales-points {
