Use flex-basis or width to limit the space allocated for flex item, regardless the length of the text in content.

--- a/Flexbox-FlexboxBasicLayout/style.css
+++ b/Flexbox-FlexboxBasicLayout/style.css
@@ -62,10 +62,13 @@ p span {
 .sales-points {
   padding: 12vh 0;
   text-align: center;
+  display: flex;
+  justify-content: space-around;
 }
 
 .sales-point {
-  margin: 0 1vw;
+  border: 1px solid pink;
+  flex-basis: 30%;
 }
 
 .cta {
