--- a/Flexbox-FlexboxBasicLayout/style.scss
+++ b/Flexbox-FlexboxBasicLayout/style.scss
@@ -98,7 +98,12 @@ p {
   background-size: cover;
   padding: 10vh 0;
   color: $white;
+
+  display: flex;
+  justify-content: flex-end;
 }
 
 .cta-text {
+  width: 50%; // flex-basis: 50%
+  padding: 0 2em;
 }
