--- a/02-6-challenge2/style.css
+++ b/02-6-challenge2/style.css
@@ -31,6 +31,10 @@ h1 {
   margin-top: 0;
 }
 
+.section-title {
+  color: #87629A;
+}
+
 .btn {
   display: inline-block;
   text-decoration: none;
@@ -91,9 +95,9 @@ h1 {
   margin-bottom: 3em;
 }
 
-.main {
-  padding: 50px 0;
-}
+/*.main {*/
+/*  padding: 50px 0;*/
+/*}*/
 
 .main__text h2 {
   color: #136C72;
@@ -108,4 +112,19 @@ h1 {
 
 .main__bulletin-item + .main__bulletin-item {
   margin-top: 2em;
+}
+
+.main {
+  margin-top: 3em;
+}
+.primary-content {
+  width: 62%;
+}
+
+.sidebar {
+  width: 32%;
+  padding: 0 2em;
+  text-align: center;
+  color: #fff;
+  background-color: #136C72;
 }
