--- a/nav-challenge/style.css
+++ b/nav-challenge/style.css
@@ -70,7 +70,8 @@ h1 {
 
 header {
   background: #136c72;
-  padding: .5em 0;
+  /*padding: .5em 0;*/
+  padding: 1em 0;
 }
 
 .nav__list {
@@ -81,7 +82,7 @@ header {
   justify-content: space-between;
   align-items: center;
   width: 60%;
-  height: 2em;
+  /*height: 2em;*/ /* Always remember to set padding of the parent raterht and set height of the current child!!! */
 }
 
 .nav__link {
