--- a/nav-challenge/style.css
+++ b/nav-challenge/style.css
@@ -79,10 +79,14 @@ header {
   padding: 0;
   list-style: none;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 60%;
+  /*justify-content: space-between;*/
+  /*align-items: center;*/
+  /*width: 60%;*/
   /*height: 2em;*/ /* Always remember to set padding of the parent raterht and set height of the current child!!! */
+}
+
+.nav__item {
+  margin-right: 1em;
 }
 
 .nav__link {
