--- a/nav-challenge/style.css
+++ b/nav-challenge/style.css
@@ -100,6 +100,10 @@ header {
   /*height: 2em;*/ /* Always remember to set padding of the parent raterht and set height of the current child!!! */
 }
 
+.nav__list--primary {
+  margin: 0 auto;
+}
+
 /*.nav__item {*/
 /*  margin-right: 1em;*/
 /*}*/
