--- a/flexbox-challenge-4/style.css
+++ b/flexbox-challenge-4/style.css
@@ -68,12 +68,21 @@ h2 {
 }
 
 .col {
-  width: 100%; /* Each p tries to reach the max length. If there is multiple <p>, then you need another layer of .col to wrap it and margin between .col */
+  width: 48%; /* Each p tries to reach the max length. If there is multiple <p>, then you need another layer of .col to wrap it and margin between .col */
   border: 1px solid pink;
-}
 
-.col + .col {
-  margin-left: 40px;
+  /* Together with style in .article__image, it will make the image in the column responsive.
+     Will decrease the size (keep proportion) when the window size decrease.
+     Will only reach its current width as the maximum (will not stretch) when the window size increases. */
+  display: flex;
+  flex-direction: column;
+}
+/*.col + .col {*/
+/*  margin-left: 40px;*/
+/*}*/
+.article__image {
+  max-width: 100%;
+  align-self: flex-start;
 }
 
 article {
