--- a/nav-challenge/style.css
+++ b/nav-challenge/style.css
@@ -138,11 +138,22 @@ header {
 
 .hero__text {
   width: 62%;
+  border: 1px solid pink;
 }
 
+/* The reason this solution work is that with container's max-width: 1100px; and .hero__img's width: 32%;
+   the max width of the image 350px.
+   And if you place the image directly in the image, you will find it's width is 386px, which means it never stretch above it's original size.
+   So the image does not look stretch in last screen. Otherwise you will need to apply for the col div around the image, like this:
+      <div class="col">
+         <img src="img/hero-img.jpg" alt="UX design sketches" class="hero__img">
+      </div>
+   E.g. in C:\react\conquering-responsive-layouts\flexbox-challenge-4\index.html
+*/
 .hero__img {
   width: 32%;
   align-self: flex-start;
+  border: 1px solid pink;
 }
 
 .hero p {
