--- a/nav-challenge/style.css
+++ b/nav-challenge/style.css
@@ -176,7 +176,8 @@ header {
   background-color: #136c72;
 }
 
-@media (max-width: 600px) {
+/* Use 600px, 900px, 1200px, and 1800px if you plan on giving the giant-monitor people something special. */
+@media (max-width: 900px) {
   .row {
     display: block;
   }
