--- a/flexbox-challenge-4/style.css
+++ b/flexbox-challenge-4/style.css
@@ -1,7 +1,8 @@
 /*
 https://fonts.google.com/specimen/Roboto?query=roboto&sidebar.open=true&selection.family=Roboto:wght@300;400
 https://fonts.google.com/specimen/Playfair+Display?query=Playfair&sidebar.open=true&selection.family=Playfair+Display:wght@900|Roboto:wght@300;400
-
+font-family: 'Playfair Display', serif;
+font-family: 'Roboto', sans-serif;
 */
 
 *, *::before, *::after {
@@ -12,6 +13,8 @@ body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   font-size: 1.3125rem; /* 21px */
+  line-height: 1.6;
+  color: #222C2A;
 }
 
 .hero {
