--- a/flexbox-challenge-4/style.css
+++ b/flexbox-challenge-4/style.css
@@ -22,6 +22,20 @@ img {
   max-width: 100%;
 }
 
+h1, h2 {
+  font-family: 'Playfair Display', serif;
+  font-weight: 900; /* Not sure where he gets the value from */
+  margin-top: 0;
+}
+/*h1 {*/
+/*  font-size: 3.75rem;  !* 60px *!*/
+/*  color: #824936;*/
+/*}*/
+/*h2 {*/
+/*  font-size: 2.25rem;  !* 36px *!*/
+/*}*/
+
+
 .hero {
   height: 100vh;
   background-color: #f3EED9;
@@ -43,16 +57,7 @@ img {
   text-transform: uppercase;
   letter-spacing: 0.5em;
 }
-h1 {
-  font-family: 'Playfair Display', serif;
-  font-size: 3.75rem;  /* 60px */
-  color: #824936;
-}
 
-h2 {
-  font-family: 'Playfair Display', serif;
-  font-size: 2.25rem;  /* 36px */
-}
 .main-title {
   color: #824936;
   text-align: center;
