--- a/flexbox-challenge-4/style.css
+++ b/flexbox-challenge-4/style.css
@@ -26,6 +26,10 @@ h1, h2 {
   font-family: 'Playfair Display', serif;
   font-weight: 900; /* Not sure where he gets the value from */
   margin-top: 0;
+
+  /* Generally the gap between each line in h1-h4 is big. You can make it smaller but Need to check
+  when in smaller screen whether each line may overlap each other. e.g. the 'p' in line 1 with the 'h' in line 2 */
+  line-height: 1.1;
 }
 /*h1 {*/
 /*  font-size: 3.75rem;  !* 60px *!*/
@@ -57,13 +61,19 @@ h1, h2 {
   letter-spacing: 0.5em;
 }
 
-.intro {
+.intro { /* .hero */
   background-color: #f3EED9;
   padding: 200px 0; /* we are not setting 100vh * for this one */
   text-align: center; /* use text-align rather than flexbox */
   color: #824936; /* put the color here rather than in h1 <<< Good decision */
 }
-
+.intro__text { /* .subtitle */
+  text-transform: uppercase;
+  letter-spacing: 10px;
+  font-size: 1.125rem; /* 18px */
+  color: #222C2A;
+  margin: 0 0 .25em;
+}
 
 
 
