--- a/flexbox-challenge-4/style.css
+++ b/flexbox-challenge-4/style.css
@@ -50,6 +50,13 @@ section { /* main, article */
   margin: 0 auto;
 }
 
+.section-title { /* .article-title, h2 */
+  font-size: 2.25rem;  /* 36px */
+  color: #f3EED9;
+}
+.section-title--dark { /* .main-title */
+  color: #824936;
+}
 /*--------------------------------------------------*/
 
 .hero {
@@ -111,24 +118,24 @@ section { /* main, article */
 /*  margin: 0 auto;*/
 /*}*/
 
-.row {
-  display: flex;
-  justify-content: space-between;
-}
-
-.col {
-  width: 48%; /* Each p tries to reach the max length. If there is multiple <p>, then you need another layer of .col to wrap it and margin between .col */
-  /*border: 1px solid pink;*/
-
-  /* Together with style in .article__image, it will make the image in the column responsive.
-     Will decrease the size (keep proportion) when the window size decrease.
-     Will only reach its current width as the maximum (will not stretch) when the window size increases. */
-  display: flex;
-  flex-direction: column;
-}
-/*.col + .col {*/
-/*  margin-left: 40px;*/
+/*.row {*/
+/*  display: flex;*/
+/*  justify-content: space-between;*/
 /*}*/
+
+/*.col {*/
+/*  width: 48%; !* Each p tries to reach the max length. If there is multiple <p>, then you need another layer of .col to wrap it and margin between .col *!*/
+/*  !*border: 1px solid pink;*!*/
+
+/*  !* Together with style in .article__image, it will make the image in the column responsive.*/
+/*     Will decrease the size (keep proportion) when the window size decrease.*/
+/*     Will only reach its current width as the maximum (will not stretch) when the window size increases. *!*/
+/*  display: flex;*/
+/*  flex-direction: column;*/
+/*}*/
+/*!*.col + .col {*!*/
+/*!*  margin-left: 40px;*!*/
+/*!*}*!*/
 .article__image {
   max-width: 100%;
   align-self: flex-start;
