--- a/flexbox-challenge-4/style.css
+++ b/flexbox-challenge-4/style.css
@@ -95,8 +95,10 @@ section { /* main, article */
   color: #222C2A;
   margin: 0 0 .25em;
 }
+/* style first for mobile */
 .intro__title { /* h1 */
-  font-size: 60px;  /* Not sure why Kevin is not using rem here. */
+  /*font-size: 60px;  !* Not sure why Kevin is not using rem here. *!*/
+  font-size: 3rem;
 }
 
 .section-three { /* .article--primary */
