--- a/nav-challenge-1/style.css
+++ b/nav-challenge-1/style.css
@@ -120,15 +120,48 @@ header {
 
    Works the same :) */
 .nav {
+  /*border: 1px solid white;*/
   visibility: hidden;
   height: 0;
   position: absolute;
+  text-transform: uppercase;
 }
 
 .nav--visible {
   visibility: visible;
   height: auto;
   position: relative;
+}
+
+.nav__list {
+  /*border: 1px solid red;*/
+  list-style: none;
+  padding: 0;
+
+  display: flex;
+  flex-direction: column;
+  /*justify-content: center;*/
+  align-items: center;
+}
+.nav__item {
+  /*border: 1px solid orangered;*/
+  /*padding: 1.5em 0;*/
+  /*display: block;*/
+  margin: 0.25em 0;
+}
+.nav__link {
+  /*border: 1px solid yellow;*/
+  text-decoration: none;
+  color: #fff;
+
+  display: block;
+  padding: 0.5em 1em;
+}
+.nav__link--button {
+  /*border: 1px solid white;*/
+  background-color: #fff;
+  color: #23424A;
+  border-radius: 100vw;
 }
 
 
