--- a/nav-challenge-1/style.css
+++ b/nav-challenge-1/style.css
@@ -140,13 +140,10 @@ header {
 
   display: flex;
   flex-direction: column;
-  /*justify-content: center;*/
   align-items: center;
 }
 .nav__item {
   /*border: 1px solid orangered;*/
-  /*padding: 1.5em 0;*/
-  /*display: block;*/
   margin: 0.25em 0;
 }
 .nav__link {
@@ -155,7 +152,7 @@ header {
   color: #fff;
 
   display: block;
-  padding: 0.5em 1em;
+  padding: 0.3em 0.75em;
 }
 .nav__link--button {
   /*border: 1px solid white;*/
@@ -206,10 +203,28 @@ header {
     display: none;
   }
 
+  .logo {
+    /*border: 1px solid greenyellow;*/
+    align-self: center;
+  }
   .nav {
     visibility: visible;
     display: flex;
+    justify-content: space-between;
     height: auto;
+  }
+  .nav__list {
+    margin: 0;
+    flex-direction: row;
+  }
+  .nav__list--primary {
+    margin: 0 auto;
+  }
+  .nav__item + .nav__item {
+    margin-left: 0.5em;
+  }
+  .nav__link {
+    display: inline;
   }
 
   .row {
