--- a/nav-challenge-1/style.css
+++ b/nav-challenge-1/style.css
@@ -125,6 +125,7 @@ header {
   height: 0;
   position: absolute;
   text-transform: uppercase;
+  font-size: 1rem;
 }
 
 .nav--visible {
@@ -136,6 +137,7 @@ header {
 .nav__list {
   /*border: 1px solid red;*/
   list-style: none;
+  margin: 0;
   padding: 0;
 
   display: flex;
@@ -144,7 +146,8 @@ header {
 }
 .nav__item {
   /*border: 1px solid orangered;*/
-  margin: 0.25em 0;
+  /*margin: 0.25em 0;*/
+  margin-top: 0.75em;
 }
 .nav__link {
   /*border: 1px solid yellow;*/
