--- a/nav-challenge-1/style.css
+++ b/nav-challenge-1/style.css
@@ -157,6 +157,10 @@ header {
   display: block;
   padding: 0.3em 0.75em;
 }
+.nav__link:hover,
+.nav__link:focus {
+  opacity: .65;
+}
 .nav__link--button {
   /*border: 1px solid white;*/
   background-color: #fff;
