--- a/nav-challenge-1/style.css
+++ b/nav-challenge-1/style.css
@@ -140,9 +140,9 @@ header {
   margin: 0;
   padding: 0;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  /*display: flex;*/
+  /*flex-direction: column;*/
+  /*align-items: center;*/
 }
 .nav__list--primary {
   margin-bottom: 2em; /* better to do this one than rely on the margin top|bottom on user agent for <ul> (.nav__list) */
