--- a/nav-challenge-1/style.css
+++ b/nav-challenge-1/style.css
@@ -228,6 +228,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
     height: auto;
   }
   .nav__list {
