--- a/nav-challenge-2/style.css
+++ b/nav-challenge-2/style.css
@@ -13,3 +13,21 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.125rem; /* 18px; */
 }
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+img {
+  max-width: 100%;
+}
+
+.container {
+  width: 85%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
