--- a/nav-challenge-2/style.css
+++ b/nav-challenge-2/style.css
@@ -49,8 +49,10 @@ img {
 /* Component styling -- Specific ones -- Header section*/
 .nav {
   background-color: var(--clr-dark);
-  padding: 1rem 0;
+  padding: 1.5rem 0;
   text-align: center;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
 }
 .nav__item {
   /*border: 1px solid red;*/
@@ -60,3 +62,14 @@ img {
   /*border: 1px solid green;*/
   color: var(--clr-light);
 }
+.nav__link:focus,
+.nav__link:hover {
+  opacity: 0.7;
+}
+.nav__link--btn {
+  background-color: var(--clr-primary);
+  display: inline-block;
+  padding: 0.25rem 1rem;
+  border-radius: 100vw;
+}
+
