--- a/nav-challenge-2/style.css
+++ b/nav-challenge-2/style.css
@@ -24,7 +24,7 @@ body {
   margin: 0; /* override browser agent default */
 }
 
-h1, h3 {
+h1, h2, h3 {
   margin-top: 0;
 }
 ul {
@@ -149,4 +149,31 @@ img {
 }
 .sidebar-item__text {
   font-size: 1.125rem; /* 18px */
+}
+
+/* Component styling -- Specific ones -- footer */
+.footer {
+  background-color: var(--clr-secondary);
+  color: var(--clr-light);
+  padding: 2rem 0;
+  text-align: center;
+}
+.footer__title {
+  font-family: 'Oswald', sans-serif;
+  font-size: 1.5rem; /* 24px */
+}
+.footer__subtitle {
+  color: var(--clr-primary);
+  font-family: 'Oswald', sans-serif;
+  font-size: 1.3125rem; /* 21px */
+}
+.footer__text {
+  font-size: 1rem; /* 16px */
+}
+.footer__item {
+  margin-top: 1rem;
+}
+.footer__link {
+  color: var(--clr-light);
+  font-size: 1rem; /* 16px */
 }
