--- a/nav-challenge-2/style.css
+++ b/nav-challenge-2/style.css
@@ -146,6 +146,7 @@ img {
 .sidebar-item__title {
   font-family: 'Oswald', sans-serif;
   font-size: 1.875rem; /* 30px */
+  line-height: 1.1;
 }
 .sidebar-item__text {
   font-size: 1.125rem; /* 18px */
@@ -189,5 +190,12 @@ img {
   /* Component styling -- Specific ones -- hero section*/
   .hero__text {
     align-self: flex-end;
+  }
+
+  .sidebar-item {
+    margin-top: 1em;
+  }
+  .sidebar-item + .sidebar-item {
+    margin-left: 1em;
   }
 }
