--- a/nav-challenge-2/style.css
+++ b/nav-challenge-2/style.css
@@ -146,7 +146,7 @@ img {
 .sidebar-item__title {
   font-family: 'Oswald', sans-serif;
   font-size: 1.875rem; /* 30px */
-  line-height: 1.1;
+  line-height: 1;
 }
 .sidebar-item__text {
   font-size: 1.125rem; /* 18px */
@@ -186,12 +186,24 @@ img {
     display: flex;
     justify-content: space-between;
   }
+  .col {
+    margin-bottom: 1em;
+  }
+  .col + .col{
+    margin-left: 1.5em;
+  }
 
   /* Component styling -- Specific ones -- hero section*/
   .hero__text {
     align-self: flex-end;
   }
 
+  /* Component styling -- Specific ones -- main -- section one */
+  .section-one {
+    text-align: center;
+  }
+
+  /* Component styling -- Specific ones -- main -- section two */
   .sidebar-item {
     margin-top: 1em;
   }
