--- a/nav-challenge-2/style.css
+++ b/nav-challenge-2/style.css
@@ -168,6 +168,7 @@ img {
   color: var(--clr-primary);
   font-family: 'Oswald', sans-serif;
   font-size: 1.3125rem; /* 21px */
+  line-height: 1.2;
 }
 .footer__text {
   font-size: 1rem; /* 16px */
