--- a/nav-challenge-2/style.css
+++ b/nav-challenge-2/style.css
@@ -47,6 +47,7 @@ img {
 
 /* Component styling -- common ones */
 .container {
+  /*border: 1px solid green;*/
   width: 85%;
   max-width: 1200px;
   margin: 0 auto;
@@ -87,17 +88,18 @@ img {
 /* Component styling -- Specific ones -- hero section*/
 .hero {
   background-color: var(--clr-secondary);
-  padding: 2rem 0;
+  padding: 2em 0;
   color: var(--clr-light);
   text-align: center;
 }
 .hero__title {
+  /*border: 1px solid red;*/
   font-family: 'Oswald', sans-serif;
   font-size: 3.5rem; /* 56px, will make it 90px in desktop */
-  line-height: 1.2;
+  line-height: 1.1;
 }
 .hero__text {
-  font-size: 1.5rem; /* 16px, will make it 24px in desktop */
+  font-size: 1.5rem; /* 24px */
 }
 .hero__btn {
   font-family: 'Oswald', sans-serif;
@@ -195,7 +197,17 @@ img {
   }
 
   /* Component styling -- Specific ones -- hero section*/
+  .hero {
+    padding: 4em 0 6em;
+    text-align: left;
+  }
+  .hero__title {
+    width: 45%;
+    font-size: 4rem; /* 64px */
+  }
   .hero__text {
+    /*border: 1px solid red;*/
+    width: 50%;
     align-self: flex-end;
   }
 
@@ -210,5 +222,12 @@ img {
   }
   .sidebar-item + .sidebar-item {
     margin-left: 1em;
+  }
+}
+
+@media (min-width: 1100px) {
+  /* Component styling -- Specific ones -- hero section*/
+  .hero__title {
+    font-size: 5.625rem; /* 90px*/
   }
 }
