--- a/nav-challenge-2/style.css
+++ b/nav-challenge-2/style.css
@@ -194,7 +194,7 @@ img {
     margin-bottom: 0;
   }
   .col + .col{
-    margin-left: 1.5em;
+    margin-left: 2em;
   }
 
   /* Component styling -- Specific ones -- hero section*/
@@ -240,6 +240,11 @@ img {
 }
 
 @media (min-width: 1100px) {
+  /* Component styling -- common ones */
+  .col + .col {
+    margin-left: 4em;
+  }
+
   /* Component styling -- Specific ones -- hero section*/
   .hero__title {
     font-size: 5.625rem; /* 90px*/
