Set sidebar to flex rather than row. As row is also used in .section-one and I don't want to override it base on section 2

--- a/nav-challenge-2/style.css
+++ b/nav-challenge-2/style.css
@@ -219,6 +219,11 @@ img {
   }
 
   /* Component styling -- Specific ones -- main -- section two */
+  .sidebar {
+    display: flex;
+    justify-content: space-between;
+  }
+
   .sidebar-item {
     margin-top: 1em;
   }
